RESOLVED FIXED44370
Media engine should not be asked to open all urls
https://bugs.webkit.org/show_bug.cgi?id=44370
Summary Media engine should not be asked to open all urls
Eric Carlson
Reported 2010-08-20 16:35:45 PDT
MediaPlayer::load() currently tries to find a media engine that supports the specified MIME type, if there is one, but it uses the first registered engine if none claims the type so the media engine can sniff the data (if it wishes) and handle misconfigured servers. This is reasonable in the case where no type is specified in the markup, but it should not ask a media engine to open a url if the markup has a type attribute, and canPlayType() would return "" for that type.
Attachments
proposed patch (6.65 KB, patch)
2010-08-20 16:46 PDT, Eric Carlson
mitz: review+
Eric Carlson
Comment 1 2010-08-20 16:46:22 PDT
Created attachment 65010 [details] proposed patch
Eric Carlson
Comment 2 2010-08-21 11:43:20 PDT
Ademar Reis
Comment 3 2011-01-24 12:20:46 PST
Revision r65779 cherry-picked into qtwebkit-2.2 with commit 0386972 <http://gitorious.org/webkit/qtwebkit/commit/0386972>
Note You need to log in before you can comment on or make changes to this bug.