2010-08-21  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Dan Bernstein.

        Media engine should not be asked to open all urls
        https://bugs.webkit.org/show_bug.cgi?id=44370

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::load): Do nothing with urls with a type attribute that would be
        rejected by canPlayType().

2010-08-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Dan Bernstein.

        Media engine should not be asked to open all urls
        https://bugs.webkit.org/show_bug.cgi?id=44370

        * media/video-source-none-supported-expected.txt:
        * media/video-source-none-supported.html:
        * media/video-source-type.html:



Canonical link: https://commits.webkit.org/56558@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65779 268f45cc-cd09-0410-ab3c-d52691b4dbfc